<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Juan Antonio López.</b></string>
    <string name="accept">Aceptar</string>
    <string name="exit_guide">Saltar guía</string>
    <string name="info">Info</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="texto1">Preparate para explorar el mundo mágico de:</string>
    <string name="texto2">Pulsa sobre el botón de comenzar para iniciar la guia interactiva!!</string>
    <string name="comenzar">Comenzar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="siguiente">Siguiente</string>
    <string name="texto_guia_personajes">Aquí podrás explorar a todos los personajes del mundo de Spyro.</string>
    <string name="atras">Atrás</string>
    <string name="texto_guia_mundos">Aquí podrás navegar a través de los mundos de Spyro</string>
    <string name="texto_guia_coleccionables">Aquí encontraras los elementos coleccionables que podremos encontrar en el universo de Spyro</string>
    <string name="cerrar">Cerrar</string>
    <string name="resumen">Resumen</string>
    <string name="textoResumen">- Se ha visto cómo acceder a la pestaña de <b>Personajes</b>.\n\n- Hemos aprendido cómo acceder a la pestaña <b>Mundos</b>, donde veremos todos los mundos disponibles.\n\n- Hemos llegado a la pestaña de los <b>Coleccionables</b>.\n\n- Por último, hemos aprendido cómo acceder a la información de la autoría de esta aplicación.</string>
    <string name="salir">Salir del Vídeo</string>
    <string name="text_egg1">Vídeo Easter Egg</string>
    <string name="easter_egg">Easter Egg</string>

</resources>